# GuesstAImate

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  firestore.rules
.github/: copilot-instructions.md
.github/workflows/: ci_python.yml  deploy_backend.yml  static.yml
backend/: Dockerfile  ai_service.py  main.py  models.py  pyproject.toml
frontend/: README.md  app.js  auth.js  charts.js  firebase.js  index.html  main.js  manifest.json  recording.js  render.js  service-worker.js  storage.js  styles.css  swipe.js  track.js
terraform/: .terraform.lock.hcl  README.md  azure_container_app.tf  azure_identity.tf  azure_resource_group.tf  backend.tf  firestore_rules.tf  outputs.tf  providers.tf  terraform.tfvars.example  tf  variables.tf
