[project]
name = "guesstaimate-api"
version = "0.1.0"
description = "Voice-powered calorie tracker API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
